# testy

./: LICENSE  LICENSE.md  README.md  do_all.py  future.txt  requirements.txt  setup.cfg  setup.py
docs/: format_doc.py  future.txt  testy_quick user doc 98bb247e94d44b87842f2ae764b74f2f.html  user_doc.html  want.txt
tests/: 1_test_create.py  2_class_method.py  d1.csv  df2.csv  j1.json  t1.py  t10.py  t11.py  t12.py  t13.py  t14.py  t15.py  t16.py  t2.py  t3.py  t4.py  t5.py  t6.py  t7.py  t8.py  t9.py  tools.py
tests/user_functions/: run.py  test_create_test_case.py  test_handler.py  test_method.py  test_options.py  test_run.py
testy/: hello.py
testy_quick/: __init__.py  check_metadata.py  end_functions.py  functions.py  handlers.py  intermediary_functions.py  low_level.py  others.py  settings.py  strings.py  structures.py  tools_for_tests.py  user_string.py
testy_quick/handlers/: __init__.py  _registered.py  base_answer.py  base_comparer.py  base_handler.py  base_reader.py  base_writer.py  conditions.py  csv_args_reader.py  csv_default_answer.py  csv_reader.py  dataframe_default_comparer.py  dataframe_indexed_comparer.py  default_comparer.py  default_json_answer.py  indexed_dataframe_answer.py  json_handler.py  json_reader.py
testy_quick/testers/: __init__.py  simple_tester.py
testy_quick/variable_handlers/: __init__.py  base_handler.py  conditions.py  dataframe_handler.py  exception_handler.py  json_handler.py  register.py  to_expose.py
