[metadata]
name = testy
version = attr: testy.__version__
author = Artur Baboi
author_email = abc05artur@gmail.com
description = For quickly setting up unit tests
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: Free for non-commercial use :: CC BY-NC-SA 4.0

[options]
packages = find:
python_requirements = >=3.0
include_package_data = False